--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -7,10 +7,10 @@
 
     <TextView
         android:id="@+id/lblListHeader"
+        android:layout_width="373dp"
+        android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:textSize="16dp"
         android:textColor="@android:color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="16dp" />
 
 </LinearLayout>
