--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0054a6</color>
-    <color name="colorPrimaryDark">#37474F</color>
+    <color name="colorPrimaryDark">#0054a6</color>
     <color name="colorAccent">#CFD8DC</color>
 </resources>
