--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -6,8 +6,7 @@
     <item
         android:id="@+id/nav_timetable"
         android:orderInCategory="100"
-        android:title="@string/timetable"
-         />
+        android:title="@string/timetable" />
     <item
         android:id="@+id/nav_student"
         android:orderInCategory="100"
@@ -19,13 +18,11 @@
     <item
         android:id="@+id/nav_teachers"
         android:orderInCategory="100"
-        android:title="@string/teacher"
-        />
+        android:title="@string/teacher" />
         <item
             android:id="@+id/nav_rooms"
             android:title="@string/room"
-            android:orderInCategory="100"
-            />
+            android:orderInCategory="100" />
     <!--</group>-->
 
 
