--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
-    <!--<group android:checkableBehavior="single">-->
-    <item
-        android:id="@+id/nav_timetable"
-        android:orderInCategory="100"
-        android:title="@string/timetable" />
-    <item
-        android:id="@+id/nav_student"
-        android:orderInCategory="100"
-        android:title="@string/student" />
-    <item
-        android:id="@+id/nav_groups"
-        android:orderInCategory="100"
-        android:title="@string/group" />
-    <item
-        android:id="@+id/nav_teachers"
-        android:orderInCategory="100"
-        android:title="@string/teacher" />
+    <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_rooms"
-            android:title="@string/room"
-            android:orderInCategory="100" />
-    <!--</group>-->
+            android:id="@+id/nav_timetable"
+            android:title="@string/timetable"></item>
+        <item
+            android:id="@+id/nav_student"
+            android:title="@string/student"></item>
+        <item
+            android:id="@+id/nav_teacher"
+            android:title="@string/teacher"></item>
+        <item
+            android:id="@+id/nav_group"
+            android:title="@string/group"></item>
+        <item
+            android:id="@+id/nav_room"
+            android:title="@string/room"></item>
+    </group>
 
-
-
+    <item android:title="Sätted">
+        <menu>
+            <item
+                android:id="@+id/action_settings"
+                android:title="@string/action_settings"></item>
+        </menu>
+    </item>
 </menu>
