--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -21,7 +21,7 @@
             android:title="@string/room"></item>
     </group>
 
-    <item android:title="Sätted">
+    <item android:title="">
         <menu>
             <item
                 android:id="@+id/action_settings"
