--- a/app/src/main/res/layout/fragment_setting_btn.xml
+++ b/app/src/main/res/layout/fragment_setting_btn.xml
@@ -13,7 +13,8 @@
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="?android:attr/listDivider" />
+        android:background="?android:attr/listDivider"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/group_btn"
@@ -22,13 +23,15 @@
         android:layout_marginStart="52dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/buttonshape"
         android:text="@string/group"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.314" />
+        app:layout_constraintVertical_bias="0.314"
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/teacher_btn"
@@ -37,13 +40,15 @@
         android:layout_marginStart="52dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/buttonshape"
         android:text="@string/teacher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.484" />
+        app:layout_constraintVertical_bias="0.484"
+        android:textColor="@android:color/white" />
 
 
 
