--- a/app/src/main/res/layout/fragment_setting_btn.xml
+++ b/app/src/main/res/layout/fragment_setting_btn.xml
@@ -24,14 +24,15 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/buttonshape"
+        android:linksClickable="true"
         android:text="@string/group"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.314"
-        android:textColor="@android:color/white" />
+        app:layout_constraintVertical_bias="0.314" />
 
     <Button
         android:id="@+id/teacher_btn"
