--- a/app/src/main/res/layout/fragment_setting_list2.xml
+++ b/app/src/main/res/layout/fragment_setting_list2.xml
@@ -22,13 +22,13 @@
         app:layout_constraintVertical_bias="0.203" />
 
     <TextView
-        android:id="@+id/choose"
+        android:id="@+id/choose2"
         android:layout_width="211dp"
         android:layout_height="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/choose"
+        android:text="@string/choose2"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="25sp"
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/back2"
         android:layout_width="65dp"
         android:layout_height="26dp"
         android:layout_marginStart="8dp"
@@ -48,7 +48,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/buttonshape"
         android:linksClickable="true"
-        android:text="@string/back"
+        android:text="@string/back2"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
