--- a/app/src/main/res/layout/fragment_setting_list.xml
+++ b/app/src/main/res/layout/fragment_setting_list.xml
@@ -10,6 +10,8 @@
         android:id="@+id/group_list"
         android:layout_width="336dp"
         android:layout_height="67dp"
+        android:entries="@array/group_arrays"
+        android:prompt="@string/group_prompt"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
