--- a/app/src/main/res/layout/fragment_setting_list2.xml
+++ b/app/src/main/res/layout/fragment_setting_list2.xml
@@ -7,8 +7,10 @@
     android:layout_height="match_parent">
 
     <Spinner
-        android:id="@+id/group_list"
+        android:id="@+id/teach_list"
         android:layout_width="336dp"
+        android:entries="@array/teacher_arrays"
+        android:prompt="@string/teach_prompt"
         android:layout_height="67dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -22,7 +24,7 @@
         app:layout_constraintVertical_bias="0.203" />
 
     <TextView
-        android:id="@+id/choose2"
+        android:id="@+id/choose"
         android:layout_width="211dp"
         android:layout_height="32dp"
         android:layout_marginStart="8dp"
@@ -33,7 +35,7 @@
         android:textStyle="bold"
         android:textSize="25sp"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/group_list"
+        app:layout_constraintBottom_toTopOf="@+id/teach_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
