--- a/app/src/main/res/layout/fragment_setting_list.xml
+++ b/app/src/main/res/layout/fragment_setting_list.xml
@@ -8,20 +8,20 @@
 
     <Spinner
         android:id="@+id/group_list"
-        android:layout_width="336dp"
-        android:layout_height="67dp"
-        android:entries="@array/group_arrays"
-        android:prompt="@string/group_prompt"
+        android:layout_width="206dp"
+        android:layout_height="61dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:entries="@array/group_arrays"
+        android:prompt="@string/group_prompt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.264"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.203" />
+        app:layout_constraintVertical_bias="0.235" />
 
     <TextView
         android:id="@+id/choose"
@@ -58,6 +58,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.985" />
+
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="66dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/buttonshape"
+        android:linksClickable="true"
+        android:text="@string/submit"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.251" />
 
 
 </android.support.constraint.ConstraintLayout>
