--- a/app/src/main/res/layout/fragment_setting_list.xml
+++ b/app/src/main/res/layout/fragment_setting_list.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent">
 
     <Spinner
-        android:id="@+id/group_list"
+        android:id="@+id/group_spinner"
+        android:spinnerMode="dropdown"
         android:layout_width="206dp"
         android:layout_height="61dp"
         android:layout_marginStart="8dp"
