--- a/app/src/main/res/layout/fragment_setting_list2.xml
+++ b/app/src/main/res/layout/fragment_setting_list2.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent">
 
     <Spinner
-        android:id="@+id/teach_list"
+        android:id="@+id/teach_spinner"
+        android:spinnerMode="dropdown"
         android:layout_width="206dp"
         android:layout_height="61dp"
         android:layout_marginStart="8dp"
@@ -35,7 +36,7 @@
         android:textStyle="bold"
         android:textSize="25sp"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/teach_list"
+        app:layout_constraintBottom_toTopOf="@+id/teach_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
