--- a/app/src/main/res/layout/fragment_setting_list2.xml
+++ b/app/src/main/res/layout/fragment_setting_list2.xml
@@ -61,7 +61,7 @@
         app:layout_constraintVertical_bias="0.985" />
 
     <Button
-        android:id="@+id/submit"
+        android:id="@+id/submit2"
         android:layout_width="66dp"
         android:layout_height="31dp"
         android:layout_marginTop="8dp"
