--- a/app/src/main/res/layout/info_list.xml
+++ b/app/src/main/res/layout/info_list.xml
@@ -42,7 +42,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textViewTime"
-                android:layout_marginLeft="5dp"
                 android:layout_marginTop="6dp"
 
                 android:background="#FFFFFF"
@@ -50,7 +49,8 @@
                 android:paddingRight="6dp"
                 android:text="4.7"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textViewGroup"
