--- a/app/src/main/res/layout/activity_tauris__vijar.xml
+++ b/app/src/main/res/layout/activity_tauris__vijar.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Tauris_Vijar">
+    tools:context=".Tauris_Viljar">
 
 </android.support.constraint.ConstraintLayout>
