--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recylcerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="563dp"
             tools:layout_editor_absoluteX="745dp"
             tools:layout_editor_absoluteY="-51dp" />
 
